// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button order text large size 1`] = `
<div
  className="button large"
  onClick={[Function]}
>
  order
</div>
`;

exports[`Button order text medium size 1`] = `
<div
  className="button medium"
  onClick={[Function]}
>
  order
</div>
`;

exports[`Button order text small size 1`] = `
<div
  className="button small"
  onClick={[Function]}
>
  order
</div>
`;
